# go2-marine-platform

./: .gitignore  AGENTS.md  PASOS_LAB_REAL.md  README  README.md  run_full_simulation.sh  run_marine_real.sh  run_marine_simulation.sh  skills-lock.json  test_dds_diagnostic.py  test_dds_sport_check.py  test_go2_state.py  test_sdk2_standalone.py  test_sport_activate.py
aruco_relative_pose/: README.md  config.yaml  requirements.txt
aruco_relative_pose/scripts/: analyze_pose_results.py  estimate_relative_pose.py  evaluate_realtime_aruco.py
docs/: marine_smooth_motion_v2.md
docs/media/: Screencast from 15-02-26 18:36:30.webm
informe/: bibliography.bib  main.fdb_latexmk  main.fls  main.tex
informe/docs/: 01_resumen_del_proyecto.md  02_estado_del_informe.md  03_material_disponible.md  04_huecos_y_preguntas.md  05_criterios_de_redaccion_y_lectura.md  06_estructura_propuesta_del_informe.md  07_marco_teorico_como_relato.md  08_papers_para_marco_teorico.md  09_presupuesto_de_extension.md  10_brief_introduccion.md  11_brief_marco_teorico_y_estado_del_arte.md  12_brief_metodologia.md  13_metodologia_simulacion_detallada.md  14_metodologia_laboratorio_detallada.md  15_preguntas_prioritarias_metodologia.md  16_brief_experimentacion_simulacion.md  17_plan_experimentos_simulacion_elegido.md  18_checklist_ultima_visita_laboratorio.md  19_relevamiento_origin_real.md  README.md
informe/refs/: ejemplo.tex
informe/scripts/: plot_marine_sinusoidal_reference.py  plot_marine_wave_patterns_compare.py
marine_robot_dataset/: README.md  extract_all_datasets.sh  extract_complete_dataset.py  extract_dataset.py  extract_video_frames.py  map_video_to_timestamps.py  requirements.txt  visualize_dataset.py
rosbags/: README.md  code-example.md  play_bag_rviz.sh  plot_movimiento_comparaciones.py  record_lab_real.sh  record_marine_simulation.sh  record_sjtu_drone_simulation.sh
rosbags/lab_real_20260320_125002_movimiento_full_v3/: metadata.yaml  reporte_movimiento_completo.md
src/drone/: README.md  package.xml  setup.py
src/drone_landing/: README.md  package.xml  setup.cfg  setup.py
src/drone_landing/config/: drone_params.yaml
src/drone_landing/drone_landing/: drone_controller.py
src/drone_landing/launch/: drone_landing.launch.py
src/drone_landing/urdf/: drone_camera.xacro
src/fixed_camera/: README.md  package.xml  setup.cfg  setup.py
src/fixed_camera/config/: aruco_detector_params.yaml  fixed_camera_params.yaml
src/fixed_camera/fixed_camera/: aruco_detector.py  camera_controller.py  stereo_eye_publisher.py
src/fixed_camera/launch/: fixed_camera.launch.py  lab_real.launch.py
src/fixed_camera/urdf/: fixed_camera.xacro
src/go2_tools/: MARINE_README.md  README.md  package.xml  setup.cfg  setup.py
src/go2_tools/go2_tools/: body_posture_effort_ctrl.py  marine_manual_control.py  marine_platform_simulator.py
src/go2_tools/go2_tools/legacy/: README.md  body_pose_smoother.py
stereo_camera/: README.md  config.yaml  requirements.txt
stereo_camera/calibration/: calibration_result.yaml
(+39 files in other folders)
