<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_tools</name>
  <version>0.0.0</version>
  <description>Tools for Unitree Go2 marine platform simulation</description>
  <maintainer email="mgubitosi@udesa.edu.ar">linar</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Unitree Go2 real mode (optional — only needed for mode:=real) -->
  <!-- Compilar en ~/unitree_ros2/cyclonedds_ws y hacer source antes de usar -->
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>unitree_go</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
